// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breakdown when data is loaded returns the transaction breakdown for a service 1`] = `
Object {
  "timeseries": Array [
    Object {
      "color": "#54b399",
      "data": Array [
        Object {
          "x": 1607435850000,
          "y": null,
        },
        Object {
          "x": 1607435880000,
          "y": null,
        },
        Object {
          "x": 1607435910000,
          "y": 0.365384615384615,
        },
        Object {
          "x": 1607435940000,
          "y": 0.514705882352941,
        },
        Object {
          "x": 1607435970000,
          "y": null,
        },
        Object {
          "x": 1607436000000,
          "y": null,
        },
        Object {
          "x": 1607436030000,
          "y": 0.826086956521739,
        },
        Object {
          "x": 1607436060000,
          "y": null,
        },
        Object {
          "x": 1607436090000,
          "y": null,
        },
        Object {
          "x": 1607436120000,
          "y": null,
        },
        Object {
          "x": 1607436150000,
          "y": 0.0967741935483871,
        },
        Object {
          "x": 1607436180000,
          "y": 0.321428571428571,
        },
        Object {
          "x": 1607436210000,
          "y": null,
        },
        Object {
          "x": 1607436240000,
          "y": null,
        },
        Object {
          "x": 1607436270000,
          "y": 0.44047619047619,
        },
        Object {
          "x": 1607436300000,
          "y": 0.75,
        },
        Object {
          "x": 1607436330000,
          "y": null,
        },
        Object {
          "x": 1607436360000,
          "y": 0.25531914893617,
        },
        Object {
          "x": 1607436390000,
          "y": 0.229508196721311,
        },
        Object {
          "x": 1607436420000,
          "y": null,
        },
        Object {
          "x": 1607436450000,
          "y": null,
        },
        Object {
          "x": 1607436480000,
          "y": null,
        },
        Object {
          "x": 1607436510000,
          "y": 0.417721518987342,
        },
        Object {
          "x": 1607436540000,
          "y": 0.80952380952381,
        },
        Object {
          "x": 1607436570000,
          "y": null,
        },
        Object {
          "x": 1607436600000,
          "y": null,
        },
        Object {
          "x": 1607436630000,
          "y": 0.220238095238095,
        },
        Object {
          "x": 1607436660000,
          "y": 0.0790513833992095,
        },
        Object {
          "x": 1607436690000,
          "y": null,
        },
        Object {
          "x": 1607436720000,
          "y": null,
        },
        Object {
          "x": 1607436750000,
          "y": 0.232283464566929,
        },
        Object {
          "x": 1607436780000,
          "y": 0.0571428571428571,
        },
        Object {
          "x": 1607436810000,
          "y": null,
        },
        Object {
          "x": 1607436840000,
          "y": 0.027027027027027,
        },
        Object {
          "x": 1607436870000,
          "y": 0.0666666666666667,
        },
        Object {
          "x": 1607436900000,
          "y": null,
        },
        Object {
          "x": 1607436930000,
          "y": null,
        },
        Object {
          "x": 1607436960000,
          "y": null,
        },
        Object {
          "x": 1607436990000,
          "y": 0.16504854368932,
        },
        Object {
          "x": 1607437020000,
          "y": null,
        },
        Object {
          "x": 1607437050000,
          "y": null,
        },
        Object {
          "x": 1607437080000,
          "y": null,
        },
        Object {
          "x": 1607437110000,
          "y": 0.477611940298507,
        },
        Object {
          "x": 1607437140000,
          "y": 0.549019607843137,
        },
        Object {
          "x": 1607437170000,
          "y": null,
        },
        Object {
          "x": 1607437200000,
          "y": null,
        },
        Object {
          "x": 1607437230000,
          "y": 0.318840579710145,
        },
        Object {
          "x": 1607437260000,
          "y": 0.555555555555556,
        },
        Object {
          "x": 1607437290000,
          "y": null,
        },
        Object {
          "x": 1607437320000,
          "y": null,
        },
        Object {
          "x": 1607437350000,
          "y": 0.506329113924051,
        },
        Object {
          "x": 1607437380000,
          "y": null,
        },
        Object {
          "x": 1607437410000,
          "y": null,
        },
        Object {
          "x": 1607437440000,
          "y": null,
        },
        Object {
          "x": 1607437470000,
          "y": 0.728813559322034,
        },
        Object {
          "x": 1607437500000,
          "y": 0.38,
        },
        Object {
          "x": 1607437530000,
          "y": null,
        },
        Object {
          "x": 1607437560000,
          "y": null,
        },
        Object {
          "x": 1607437590000,
          "y": 0.371428571428571,
        },
        Object {
          "x": 1607437620000,
          "y": null,
        },
        Object {
          "x": 1607437650000,
          "y": null,
        },
      ],
      "hideLegend": false,
      "legendValue": "31%",
      "title": "app",
      "type": "areaStacked",
    },
    Object {
      "color": "#6092c0",
      "data": Array [
        Object {
          "x": 1607435850000,
          "y": null,
        },
        Object {
          "x": 1607435880000,
          "y": null,
        },
        Object {
          "x": 1607435910000,
          "y": 0.317307692307692,
        },
        Object {
          "x": 1607435940000,
          "y": 0.382352941176471,
        },
        Object {
          "x": 1607435970000,
          "y": null,
        },
        Object {
          "x": 1607436000000,
          "y": null,
        },
        Object {
          "x": 1607436030000,
          "y": 0,
        },
        Object {
          "x": 1607436060000,
          "y": null,
        },
        Object {
          "x": 1607436090000,
          "y": null,
        },
        Object {
          "x": 1607436120000,
          "y": null,
        },
        Object {
          "x": 1607436150000,
          "y": 0.903225806451613,
        },
        Object {
          "x": 1607436180000,
          "y": 0.491071428571429,
        },
        Object {
          "x": 1607436210000,
          "y": null,
        },
        Object {
          "x": 1607436240000,
          "y": null,
        },
        Object {
          "x": 1607436270000,
          "y": 0.30952380952381,
        },
        Object {
          "x": 1607436300000,
          "y": 0,
        },
        Object {
          "x": 1607436330000,
          "y": null,
        },
        Object {
          "x": 1607436360000,
          "y": 0.617021276595745,
        },
        Object {
          "x": 1607436390000,
          "y": 0.721311475409836,
        },
        Object {
          "x": 1607436420000,
          "y": null,
        },
        Object {
          "x": 1607436450000,
          "y": null,
        },
        Object {
          "x": 1607436480000,
          "y": null,
        },
        Object {
          "x": 1607436510000,
          "y": 0.455696202531646,
        },
        Object {
          "x": 1607436540000,
          "y": 0,
        },
        Object {
          "x": 1607436570000,
          "y": null,
        },
        Object {
          "x": 1607436600000,
          "y": null,
        },
        Object {
          "x": 1607436630000,
          "y": 0.68452380952381,
        },
        Object {
          "x": 1607436660000,
          "y": 0.897233201581028,
        },
        Object {
          "x": 1607436690000,
          "y": null,
        },
        Object {
          "x": 1607436720000,
          "y": null,
        },
        Object {
          "x": 1607436750000,
          "y": 0.700787401574803,
        },
        Object {
          "x": 1607436780000,
          "y": 0.942857142857143,
        },
        Object {
          "x": 1607436810000,
          "y": null,
        },
        Object {
          "x": 1607436840000,
          "y": 0.972972972972973,
        },
        Object {
          "x": 1607436870000,
          "y": 0.933333333333333,
        },
        Object {
          "x": 1607436900000,
          "y": null,
        },
        Object {
          "x": 1607436930000,
          "y": null,
        },
        Object {
          "x": 1607436960000,
          "y": null,
        },
        Object {
          "x": 1607436990000,
          "y": 0.762135922330097,
        },
        Object {
          "x": 1607437020000,
          "y": null,
        },
        Object {
          "x": 1607437050000,
          "y": null,
        },
        Object {
          "x": 1607437080000,
          "y": null,
        },
        Object {
          "x": 1607437110000,
          "y": 0.41044776119403,
        },
        Object {
          "x": 1607437140000,
          "y": 0,
        },
        Object {
          "x": 1607437170000,
          "y": null,
        },
        Object {
          "x": 1607437200000,
          "y": null,
        },
        Object {
          "x": 1607437230000,
          "y": 0.442028985507246,
        },
        Object {
          "x": 1607437260000,
          "y": 0.185185185185185,
        },
        Object {
          "x": 1607437290000,
          "y": null,
        },
        Object {
          "x": 1607437320000,
          "y": null,
        },
        Object {
          "x": 1607437350000,
          "y": 0.265822784810127,
        },
        Object {
          "x": 1607437380000,
          "y": null,
        },
        Object {
          "x": 1607437410000,
          "y": null,
        },
        Object {
          "x": 1607437440000,
          "y": null,
        },
        Object {
          "x": 1607437470000,
          "y": 0,
        },
        Object {
          "x": 1607437500000,
          "y": 0.31,
        },
        Object {
          "x": 1607437530000,
          "y": null,
        },
        Object {
          "x": 1607437560000,
          "y": null,
        },
        Object {
          "x": 1607437590000,
          "y": 0.495238095238095,
        },
        Object {
          "x": 1607437620000,
          "y": null,
        },
        Object {
          "x": 1607437650000,
          "y": null,
        },
      ],
      "hideLegend": false,
      "legendValue": "55%",
      "title": "http",
      "type": "areaStacked",
    },
    Object {
      "color": "#d36086",
      "data": Array [
        Object {
          "x": 1607435850000,
          "y": null,
        },
        Object {
          "x": 1607435880000,
          "y": null,
        },
        Object {
          "x": 1607435910000,
          "y": 0.317307692307692,
        },
        Object {
          "x": 1607435940000,
          "y": 0.0882352941176471,
        },
        Object {
          "x": 1607435970000,
          "y": null,
        },
        Object {
          "x": 1607436000000,
          "y": null,
        },
        Object {
          "x": 1607436030000,
          "y": 0.130434782608696,
        },
        Object {
          "x": 1607436060000,
          "y": null,
        },
        Object {
          "x": 1607436090000,
          "y": null,
        },
        Object {
          "x": 1607436120000,
          "y": null,
        },
        Object {
          "x": 1607436150000,
          "y": 0,
        },
        Object {
          "x": 1607436180000,
          "y": 0.178571428571429,
        },
        Object {
          "x": 1607436210000,
          "y": null,
        },
        Object {
          "x": 1607436240000,
          "y": null,
        },
        Object {
          "x": 1607436270000,
          "y": 0.25,
        },
        Object {
          "x": 1607436300000,
          "y": 0.25,
        },
        Object {
          "x": 1607436330000,
          "y": null,
        },
        Object {
          "x": 1607436360000,
          "y": 0.127659574468085,
        },
        Object {
          "x": 1607436390000,
          "y": 0.0491803278688525,
        },
        Object {
          "x": 1607436420000,
          "y": null,
        },
        Object {
          "x": 1607436450000,
          "y": null,
        },
        Object {
          "x": 1607436480000,
          "y": null,
        },
        Object {
          "x": 1607436510000,
          "y": 0.113924050632911,
        },
        Object {
          "x": 1607436540000,
          "y": 0.142857142857143,
        },
        Object {
          "x": 1607436570000,
          "y": null,
        },
        Object {
          "x": 1607436600000,
          "y": null,
        },
        Object {
          "x": 1607436630000,
          "y": 0.0833333333333333,
        },
        Object {
          "x": 1607436660000,
          "y": 0.0237154150197628,
        },
        Object {
          "x": 1607436690000,
          "y": null,
        },
        Object {
          "x": 1607436720000,
          "y": null,
        },
        Object {
          "x": 1607436750000,
          "y": 0.062992125984252,
        },
        Object {
          "x": 1607436780000,
          "y": 0,
        },
        Object {
          "x": 1607436810000,
          "y": null,
        },
        Object {
          "x": 1607436840000,
          "y": 0,
        },
        Object {
          "x": 1607436870000,
          "y": 0,
        },
        Object {
          "x": 1607436900000,
          "y": null,
        },
        Object {
          "x": 1607436930000,
          "y": null,
        },
        Object {
          "x": 1607436960000,
          "y": null,
        },
        Object {
          "x": 1607436990000,
          "y": 0.0728155339805825,
        },
        Object {
          "x": 1607437020000,
          "y": null,
        },
        Object {
          "x": 1607437050000,
          "y": null,
        },
        Object {
          "x": 1607437080000,
          "y": null,
        },
        Object {
          "x": 1607437110000,
          "y": 0.0970149253731343,
        },
        Object {
          "x": 1607437140000,
          "y": 0.431372549019608,
        },
        Object {
          "x": 1607437170000,
          "y": null,
        },
        Object {
          "x": 1607437200000,
          "y": null,
        },
        Object {
          "x": 1607437230000,
          "y": 0.239130434782609,
        },
        Object {
          "x": 1607437260000,
          "y": 0.246913580246914,
        },
        Object {
          "x": 1607437290000,
          "y": null,
        },
        Object {
          "x": 1607437320000,
          "y": null,
        },
        Object {
          "x": 1607437350000,
          "y": 0.20253164556962,
        },
        Object {
          "x": 1607437380000,
          "y": null,
        },
        Object {
          "x": 1607437410000,
          "y": null,
        },
        Object {
          "x": 1607437440000,
          "y": null,
        },
        Object {
          "x": 1607437470000,
          "y": 0.23728813559322,
        },
        Object {
          "x": 1607437500000,
          "y": 0.25,
        },
        Object {
          "x": 1607437530000,
          "y": null,
        },
        Object {
          "x": 1607437560000,
          "y": null,
        },
        Object {
          "x": 1607437590000,
          "y": 0.133333333333333,
        },
        Object {
          "x": 1607437620000,
          "y": null,
        },
        Object {
          "x": 1607437650000,
          "y": null,
        },
      ],
      "hideLegend": false,
      "legendValue": "13%",
      "title": "postgresql",
      "type": "areaStacked",
    },
    Object {
      "color": "#9170b8",
      "data": Array [
        Object {
          "x": 1607435850000,
          "y": null,
        },
        Object {
          "x": 1607435880000,
          "y": null,
        },
        Object {
          "x": 1607435910000,
          "y": 0,
        },
        Object {
          "x": 1607435940000,
          "y": 0.0147058823529412,
        },
        Object {
          "x": 1607435970000,
          "y": null,
        },
        Object {
          "x": 1607436000000,
          "y": null,
        },
        Object {
          "x": 1607436030000,
          "y": 0.0434782608695652,
        },
        Object {
          "x": 1607436060000,
          "y": null,
        },
        Object {
          "x": 1607436090000,
          "y": null,
        },
        Object {
          "x": 1607436120000,
          "y": null,
        },
        Object {
          "x": 1607436150000,
          "y": 0,
        },
        Object {
          "x": 1607436180000,
          "y": 0.00892857142857143,
        },
        Object {
          "x": 1607436210000,
          "y": null,
        },
        Object {
          "x": 1607436240000,
          "y": null,
        },
        Object {
          "x": 1607436270000,
          "y": 0,
        },
        Object {
          "x": 1607436300000,
          "y": 0,
        },
        Object {
          "x": 1607436330000,
          "y": null,
        },
        Object {
          "x": 1607436360000,
          "y": 0,
        },
        Object {
          "x": 1607436390000,
          "y": 0,
        },
        Object {
          "x": 1607436420000,
          "y": null,
        },
        Object {
          "x": 1607436450000,
          "y": null,
        },
        Object {
          "x": 1607436480000,
          "y": null,
        },
        Object {
          "x": 1607436510000,
          "y": 0.0126582278481013,
        },
        Object {
          "x": 1607436540000,
          "y": 0.0476190476190476,
        },
        Object {
          "x": 1607436570000,
          "y": null,
        },
        Object {
          "x": 1607436600000,
          "y": null,
        },
        Object {
          "x": 1607436630000,
          "y": 0.0119047619047619,
        },
        Object {
          "x": 1607436660000,
          "y": 0,
        },
        Object {
          "x": 1607436690000,
          "y": null,
        },
        Object {
          "x": 1607436720000,
          "y": null,
        },
        Object {
          "x": 1607436750000,
          "y": 0.00393700787401575,
        },
        Object {
          "x": 1607436780000,
          "y": 0,
        },
        Object {
          "x": 1607436810000,
          "y": null,
        },
        Object {
          "x": 1607436840000,
          "y": 0,
        },
        Object {
          "x": 1607436870000,
          "y": 0,
        },
        Object {
          "x": 1607436900000,
          "y": null,
        },
        Object {
          "x": 1607436930000,
          "y": null,
        },
        Object {
          "x": 1607436960000,
          "y": null,
        },
        Object {
          "x": 1607436990000,
          "y": 0,
        },
        Object {
          "x": 1607437020000,
          "y": null,
        },
        Object {
          "x": 1607437050000,
          "y": null,
        },
        Object {
          "x": 1607437080000,
          "y": null,
        },
        Object {
          "x": 1607437110000,
          "y": 0.0149253731343284,
        },
        Object {
          "x": 1607437140000,
          "y": 0.0196078431372549,
        },
        Object {
          "x": 1607437170000,
          "y": null,
        },
        Object {
          "x": 1607437200000,
          "y": null,
        },
        Object {
          "x": 1607437230000,
          "y": 0,
        },
        Object {
          "x": 1607437260000,
          "y": 0.0123456790123457,
        },
        Object {
          "x": 1607437290000,
          "y": null,
        },
        Object {
          "x": 1607437320000,
          "y": null,
        },
        Object {
          "x": 1607437350000,
          "y": 0.0253164556962025,
        },
        Object {
          "x": 1607437380000,
          "y": null,
        },
        Object {
          "x": 1607437410000,
          "y": null,
        },
        Object {
          "x": 1607437440000,
          "y": null,
        },
        Object {
          "x": 1607437470000,
          "y": 0.0338983050847458,
        },
        Object {
          "x": 1607437500000,
          "y": 0.06,
        },
        Object {
          "x": 1607437530000,
          "y": null,
        },
        Object {
          "x": 1607437560000,
          "y": null,
        },
        Object {
          "x": 1607437590000,
          "y": 0,
        },
        Object {
          "x": 1607437620000,
          "y": null,
        },
        Object {
          "x": 1607437650000,
          "y": null,
        },
      ],
      "hideLegend": false,
      "legendValue": "0.9%",
      "title": "redis",
      "type": "areaStacked",
    },
  ],
}
`;

exports[`Breakdown when data is loaded returns the transaction breakdown for a transaction group 9`] = `
Array [
  Object {
    "x": 1607435850000,
    "y": null,
  },
  Object {
    "x": 1607435880000,
    "y": null,
  },
  Object {
    "x": 1607435910000,
    "y": 1,
  },
  Object {
    "x": 1607435940000,
    "y": 1,
  },
  Object {
    "x": 1607435970000,
    "y": null,
  },
  Object {
    "x": 1607436000000,
    "y": null,
  },
  Object {
    "x": 1607436030000,
    "y": null,
  },
  Object {
    "x": 1607436060000,
    "y": null,
  },
  Object {
    "x": 1607436090000,
    "y": null,
  },
  Object {
    "x": 1607436120000,
    "y": null,
  },
  Object {
    "x": 1607436150000,
    "y": 1,
  },
  Object {
    "x": 1607436180000,
    "y": 1,
  },
  Object {
    "x": 1607436210000,
    "y": null,
  },
  Object {
    "x": 1607436240000,
    "y": null,
  },
  Object {
    "x": 1607436270000,
    "y": 1,
  },
  Object {
    "x": 1607436300000,
    "y": null,
  },
  Object {
    "x": 1607436330000,
    "y": null,
  },
  Object {
    "x": 1607436360000,
    "y": 1,
  },
  Object {
    "x": 1607436390000,
    "y": 1,
  },
  Object {
    "x": 1607436420000,
    "y": null,
  },
  Object {
    "x": 1607436450000,
    "y": null,
  },
  Object {
    "x": 1607436480000,
    "y": null,
  },
  Object {
    "x": 1607436510000,
    "y": 1,
  },
  Object {
    "x": 1607436540000,
    "y": null,
  },
  Object {
    "x": 1607436570000,
    "y": null,
  },
  Object {
    "x": 1607436600000,
    "y": null,
  },
  Object {
    "x": 1607436630000,
    "y": 1,
  },
  Object {
    "x": 1607436660000,
    "y": 1,
  },
  Object {
    "x": 1607436690000,
    "y": null,
  },
  Object {
    "x": 1607436720000,
    "y": null,
  },
  Object {
    "x": 1607436750000,
    "y": 1,
  },
  Object {
    "x": 1607436780000,
    "y": 1,
  },
  Object {
    "x": 1607436810000,
    "y": null,
  },
  Object {
    "x": 1607436840000,
    "y": 1,
  },
  Object {
    "x": 1607436870000,
    "y": 1,
  },
  Object {
    "x": 1607436900000,
    "y": null,
  },
  Object {
    "x": 1607436930000,
    "y": null,
  },
  Object {
    "x": 1607436960000,
    "y": null,
  },
  Object {
    "x": 1607436990000,
    "y": 1,
  },
  Object {
    "x": 1607437020000,
    "y": null,
  },
  Object {
    "x": 1607437050000,
    "y": null,
  },
  Object {
    "x": 1607437080000,
    "y": null,
  },
  Object {
    "x": 1607437110000,
    "y": 1,
  },
  Object {
    "x": 1607437140000,
    "y": null,
  },
  Object {
    "x": 1607437170000,
    "y": null,
  },
  Object {
    "x": 1607437200000,
    "y": null,
  },
  Object {
    "x": 1607437230000,
    "y": 1,
  },
  Object {
    "x": 1607437260000,
    "y": 1,
  },
  Object {
    "x": 1607437290000,
    "y": null,
  },
  Object {
    "x": 1607437320000,
    "y": null,
  },
  Object {
    "x": 1607437350000,
    "y": 1,
  },
  Object {
    "x": 1607437380000,
    "y": null,
  },
  Object {
    "x": 1607437410000,
    "y": null,
  },
  Object {
    "x": 1607437440000,
    "y": null,
  },
  Object {
    "x": 1607437470000,
    "y": null,
  },
  Object {
    "x": 1607437500000,
    "y": 1,
  },
  Object {
    "x": 1607437530000,
    "y": null,
  },
  Object {
    "x": 1607437560000,
    "y": null,
  },
  Object {
    "x": 1607437590000,
    "y": 1,
  },
  Object {
    "x": 1607437620000,
    "y": null,
  },
  Object {
    "x": 1607437650000,
    "y": null,
  },
]
`;
